@@ -156,7 +156,7 @@ pygda_value_as_pyobject(const GValue *boxed, gboolean copy_boxed)
     } else if (value_type == G_TYPE_UINT) {
         ret = PyInt_FromLong (g_value_get_uint ((GValue*)boxed));
     } else {
-      g_warning ("G_VALUE_TYPE() returned unknown type %d", value_type);
+      g_warning ("G_VALUE_TYPE() returned unknown type %lu", value_type);
 
       Py_INCREF (Py_None);
       ret = Py_None;
